Relocate web template; add head meta google search verification

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<h1>Joathan Theiller</h1>
-<p></p>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {%- seo -%}
+  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+  {%- feed_meta -%}
+  {%- if jekyll.environment == 'production' and site.google_analytics -%}
+    {%- include google-analytics.html -%}
+  {%- endif -%}
+  <meta name="google-site-verification" content="v9v8wKK2mh8IB4k2UN3QJ1yK2EpRbzISidsHlslSO5k" />
+</head>
