fix html index, fail verification google search

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-  {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
-  <meta name="google-site-verification" content="v9v8wKK2mh8IB4k2UN3QJ1yK2EpRbzISidsHlslSO5k" />
-</head>
+<html>
+  <head>
+    <title>Joathan Theiller</title>
+    <meta name="google-site-verification" content="v9v8wKK2mh8IB4k2UN3QJ1yK2EpRbzISidsHlslSO5k" />
+  </head>
+<body>
+</body>
+<html>
