Remove validation google Search code; Add sitelink; Add Description.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <html>
   <head>
     <title>Joathan Theiller</title>
-    <meta name="google-site-verification" content="dXenTeRwfONWL8uO6Iee4jKX-hNmRAOvEDFDbZxoZfs" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://www.jtheiller.com/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://query.jtheiller.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    </script>
+	<meta charset="utf-8">
+    <meta name="Description" CONTENT="Author: Joathan Theiller, Developer: Front-end, Back-end, Category: Delphi, C#, Angular, Length: 2 pages">
+	<meta name="robots" content="all">
   </head>
-<body>
-</body>
+  <body>
+  Add meta with sitelink options search, and Description.
+  </body>
 <html>
