--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
   <head>
-    <title>Joathan Theiller</title>
+    <title>jtheiller/jtheiller.github.io: Página do perfil. Repositório público | jtheiller.github.io</title>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -13,12 +14,15 @@
       }
     }
     </script>
-    </script>
-	<meta charset="utf-8">
-    <meta name="Description" CONTENT="Author: Joathan Theiller, Developer: Front-end, Back-end, Category: Delphi, C#, Angular, Length: 2 pages">
+	<meta charset="utf-8">	
+    <meta name="Description" CONTENT="GitHub: JTheiller, Author: Joathan Theiller, Developer: Front-end, Back-end, Category: Delphi, C#, Angular, Length: 2 pages">
 	<meta name="robots" content="all">
   </head>
   <body>
-  Add meta with sitelink options search, and Description.
+  <div> 
+    <h1><a href="https://jtheiller.github.io/">jtheiller.github.io</a></h1>
+    <h1 id="r1">Joathan Theiller</h1>
+    <p>Apresentação de perfil</p>
+</div>
   </body>
 <html>
