--- a/chatCallbell/index.html
+++ b/chatCallbell/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hubspot chat</title>
+<title>Callbell chat</title>
 
 <!-- Start of Async Callbell Code -->
 <script>
